<resources>
    <string name="app_name">TCM in Shanghai</string>
    <string name="action_settings">Settings</string>
    <string name="str_detail">详情</string>
    <string-array name="texts1">
        <item>Acupuncture</item>
        <item>Moxibustion</item>
        <item>Guasha</item>
        <item>Chinese herbal medicine</item>
        <item>Tuina</item>
        <item>Cupping</item>
    </string-array>
    <string name="drawer_group_content">资讯</string>
    <string name="drawer_group_option">选项</string>
    <string name="drawer_zhihu">知乎</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于</string>
    <string name="conventional">常规</string>
    <string name="auto_cache">自动缓存</string>
    <string name="night_mode">夜间模式</string>
    <string name="drawer_wechat">微信</string>
    <string name="drawer_gold">掘金</string>
</resources>